--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
+
+        <!-- Java Faker for generating realistic mock data -->
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
