--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ build/
 
 ### VS Code ###
 .vscode/
+warmup_reflection_0.xlsx
+benchmark_function_0.xlsx
+benchmark_function_1.xlsx
+benchmark_function_2.xlsx
+benchmark_function_3.xlsx
+benchmark_function_4.xlsx
+benchmark_reflection_0.xlsx
+benchmark_reflection_1.xlsx
+benchmark_reflection_2.xlsx
+benchmark_reflection_3.xlsx
+benchmark_reflection_4.xlsx
+warmup_function_0.xlsx
+warmup_function_1.xlsx
+warmup_function_2.xlsx
+warmup_reflection_1.xlsx
